@@ -3330,7 +3330,10 @@ Ms Pac-Man (Stella extended codes):
         <tr><td>5 </td><td>Driving 1</td></tr>
         <tr><td>6 </td><td>MindLink 0</td></tr>
         <tr><td>7 </td><td>MindLink 1</td></tr>
-      </table></td>
+      </table>
+      An <I>optional</I> second parameter (default of 100) indicates how much
+      of the paddle range that the mouse should emulate.
+      </td>
     </tr>
 
 <!--
